Fix breakpoints
The Try or install page was still not displaying properly on medium
screens. The breakpoints were updated so that the download cards don't
overlap on medium screens.

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -2,10 +2,10 @@
 
 $small-screen:    575px;
 $small-screen-up: 576px;
-$medium-screen:    767px;
-$medium-screen-up: 768px;
-$large-screen:    960px;
-$large-screen-up: 961px;
+$medium-screen:    877px;
+$medium-screen-up: 878px;
+$large-screen:    1060px;
+$large-screen-up: 1061px;
 $primary-color: color("light-green", "darken-4");
 $secondary-color: color("light-green", "darken-4");
 $shade-lighten-4: color("blue-grey", "lighten-4");
